# Imbriqua_Structure_Result

./: .gitattributes  .gitignore  Cargo.toml  README.md  perf.data  perf.data.old
entities/: Cargo.toml
entities/src/: bpmn_20_a_activation_condition_complex_gateway.rs  bpmn_20_a_activity_ref_compensate_event_definition.rs  bpmn_20_a_artifacts_collaboration.rs  bpmn_20_a_artifacts_process.rs  bpmn_20_a_artifacts_sub_choreography.rs  bpmn_20_a_artifacts_sub_process.rs  bpmn_20_a_assignment_data_association.rs  bpmn_20_a_auditing_flow_element.rs  bpmn_20_a_auditing_process.rs  bpmn_20_a_boundary_event_refs_attached_to_ref.rs  bpmn_20_a_called_choreography_ref_call_choreography_activity.rs  bpmn_20_a_called_collaboration_ref_call_conversation.rs  bpmn_20_a_called_element_ref_call_activity.rs  bpmn_20_a_categorized_flow_elements_category_value_ref.rs  bpmn_20_a_category_value_category.rs  bpmn_20_a_category_value_ref_category_value_ref.rs  bpmn_20_a_child_lane_set_parent_lane.rs  bpmn_20_a_choreography_ref_collaboration.rs  bpmn_20_a_completion_condition_ad_hoc_sub_process.rs  bpmn_20_a_completion_condition_multi_instance_loop_characteristics.rs  bpmn_20_a_complex_behavior_definition_multi_instance_loop_characteristics.rs  bpmn_20_a_condition_complex_behavior_definition.rs  bpmn_20_a_condition_conditional_event_definition.rs  bpmn_20_a_condition_expression_sequence_flow.rs  bpmn_20_a_conversation_associations_converstaion_associations.rs  bpmn_20_a_conversation_links_collaboration.rs  (+534 more)
src/: bpmn_20.rs  bpmndi.rs  dc.rs  di.rs  lib.rs  main.rs  module_cmof.rs
(+967 files in other folders)
