[package]
name = "imbriqua_structure_result"
description = "Imbriqua Structure Result: Interpreter of BPMN model files (in UML notation) for Imbriqua Engine project"
version = "0.1.0"
authors = ["Marc Chatroux <marc38.chatroux@free.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
