[package]
name = "imbriqua_structure_result"
description = "Imbriqua Structure Result: Interpreter of BPMN model files (in UML notation) for Imbriqua Engine project"
version = "0.1.0"
authors = ["Marc Chatroux <marc38.chatroux@free.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entities"]

[dependencies]
entities = {path = "entities"}
tokio = { version = "1.42.0", features = ["full"] }
serde="1.0.200"
serde_json = "1.0.116"

[dependencies.sea-orm]
version = "~1.1.12" # sea-orm version
features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"]

